--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.42",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
