--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
+    "nodemon": "^3.1.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
