--- a/frontend/market-maven/package.json
+++ b/frontend/market-maven/package.json
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.34.0"
+    "eslint-plugin-react": "^7.34.1",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.1"
   }
 }
