--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "google-auth-library": "^9.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
