--- a/frontend/market-maven/package.json
+++ b/frontend/market-maven/package.json
@@ -7,11 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "bootstrap": "^4.6.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
