--- a/frontend/market-maven/package.json
+++ b/frontend/market-maven/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^0.9.0",
     "antd": "^5.16.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
